--- a/Predict_Room_Occupancy_Based_on_Environmental_Factors.ipynb
+++ b/Predict_Room_Occupancy_Based_on_Environmental_Factors.ipynb
@@ -1628,7 +1628,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Neural Network seems to work the best but Support Vector Machine is also seems to perform really good."
+        "Neural Network seems to work the best but Support Vector Machine also seems to perform really good."
       ]
     }
   ]
